changed min-height on feature-mini to see if i can fix the 'Avoid large layout shifts' issue

--- a/css/style.css
+++ b/css/style.css
@@ -263,6 +263,8 @@ h6 {
     position: relative;
     background: transparent;
     margin-top: -80px;
+    /* Added this line to see if it fixes "Avoid large layout shifts" */
+    min-height: 100px;
 }
 
 #feature-mini .container {
